--- a/documentation/package.json
+++ b/documentation/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "create-project-docs",
-  "description": "Create a project with a Docusaurus documentation website template designed for Temple University CIS Projects in Computer Science courses.",
-  "version": "1.1.1",
+  "name": "tu-cis-4398-docs-template",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start --host 0.0.0.0 ",
+    "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
@@ -13,7 +13,6 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
-  "bin": "./.bin/bin.js",
   "dependencies": {
     "@docusaurus/core": "^2.2.0",
     "@docusaurus/preset-classic": "^2.2.0",
