Fix website blocking & add webpage when blocked

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,7 +7,7 @@
     "default_icon": "PhishTales.png"
   },
   "permissions": [
-    "declarativeNetRequest",
+    "webNavigation",
     "declarativeNetRequestFeedback",
     "declarativeNetRequestWithHostAccess",
     "tabs",
