--- a/extension/package.json
+++ b/extension/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "jest-chrome": "^0.8.0",
     "sinon-chrome": "^3.0.1"
